# notebooks

./: .gitignore  Markdown语法基础教程.md  Markdown语法提示.md  README.md  build.sh  灵感随记.md  随记.md
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  graph.json  hotkeys.json  workspace.json
.obsidian/snippets/: code-inline.css  header-padding.css  list-number.css  mermaid-improve.css
Excalidraw/: Deequ架构.md  Drawing 2024-06-15 21.31.32.excalidraw.md  算法涂鸦.md
Excalidraw/软件技术方案概要设计/: 各模块接口、数据结构和算法设计.md  软件技术方案概要设计.md
learning/: 学习经验.md  常见拖延症类型及其治疗方案.md  知识分享.md  自学网站.md
learning/methodology/: 学习基础教程.md  学习学习目标频繁变动的解决方法.md  学习路径频繁变动的解决方法.md  学习过程中目标频繁变动的解决方法.md  构建知识模型.md  构建知识模型的方法.md  知识记忆基础教程.md  知识记忆的方法-构建知识模型.md
learning/reading/: 书籍清单.md  诗句摘抄.md
learning/schedule/: 每周时间资源梳理与开销计划.md  每日学习内容记录.md
learning/test/: 国家职业资格目录.md
learning/tools/: Markdown笔记工具产品调研.md  Markdown笔记工具调研.md  Obsidian使用基础教程.md  Obsidian基础教程.md  epub文件阅读工具调研.md  文件对比工具产品调研.md  自媒体文章一键跨平台发布工具产品调研.md
life/: 人生的目的.md  人生经典语录随记.md  你想成为什么样的人.md  我的爱情观.md  生活搞笑语录随记.md  生活经典语录随记.md  生活语录随记.md
life/cooking/: 牛蛙.md
life/debate/: 经典辩论赛.md
life/delicious/: 美食餐馆清单.md
life/dress/: 眼镜框选择.md  穿衣颜色搭配.md
life/exercise/: 体脂率计算公式.md  减脂期饮食健身计划.md  减脂饮食计划.md  游泳基础教程.md
life/game/: 游戏管理工具Playnite.md
life/hobby/: 古法养鱼.md
private/: 以人为镜.md
resources/images/: LeetCode16.java  LeetCode207.java  LeetCode214.java  LeetCode6.java  pyproject.toml
schedule/: Why.md  年度目标清单.md  待办事项队列看板.md  每周时间资源梳理.md
work/: note分层与层级关系.md  创业方向.md  工作经典语录随记.md  行业方向.md
(+1867 files in other folders)
