[tool.poetry]
name = "python-projects"
version = "0.1.0"
description = ""
authors = ["Tom Andersen <1040994898@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
impyla = ">=0.18.0,<0.19.0"
requests = ">=2.27.1,<2.28.0"
loguru = ">=0.6.0,<0.7.0"
six = ">=1.16.0,<1.17.0"
pytz = ">=2021.3,<2022.0"
python-dateutil = ">=2.8.2,<2.9.0"
simplejson = ">=3.17.6,<3.18.0"
pyarrow = ">=8.0.0,<8.1.0"
pymongo = ">=3.12.3,<3.13.0"
sqlparse = ">=0.4.2,<0.5.0"
hdfs = ">=2.7.0,<2.8.0"
typing = ">=3.7.4.3,<3.8.0.0"
pandahouse = ">=0.2.7,<0.3.0"
dill = ">=0.3.4,<0.4.0"
sqlalchemy = ">=1.4,<2.0"
argparse = ">=1.4.0,<1.5.0"
redis = ">=4.3.4,<4.4.0"
pyhdfs = ">=0.3.1,<0.4.0"
pulsar = "^2.0.2"
clickhouse-driver = "^0.2.9"
apache-airflow = "2.5.0"
apache-airflow-providers-apache-spark = ">=4.0.0,<4.1.1"
retrying = "^1.3.4"


[[tool.poetry.source]]
name = "custom-repo"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
